--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aditya Kumar Singh - DevOps & Cloud Engineer</title>
+    <title>Aditya Kumar Singh - Cloud DevOps Engineer</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -57,7 +57,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>I'm a Cloud & DevOps Engineer with 3+ years of experience in architecting, deploying, and managing scalable cloud-native solutions across Azure and AWS. I'm skilled in modernizing monolithic applications to microservices using Docker and Kubernetes.</p>
+                    <p>I'm a Cloud DevOps Engineer with 5 years of experience in architecting, deploying, and managing scalable cloud-native solutions across Azure and AWS. I'm skilled in modernizing monolithic applications to microservices using Docker and Kubernetes.</p>
                     <p>My expertise includes Infrastructure-as-Code (Terraform, Ansible), CI/CD automation (Jenkins, GitLab), and cloud cost optimization strategies. I have a proven ability to deliver secure, compliant, and high-performance solutions for e-commerce platforms.</p>
                     <div class="personal-info">
                         <div class="info-item">
