--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="hero-content">
             <div class="hero-text">
                 <h1>Hi, I'm <span>Aditya Kumar Singh</span></h1>
-                <h2>DevOps & Cloud Engineer</h2>
+                <h2>Cloud DevOps Engineer</h2>
                 <p>Specializing in Cloud Infrastructure, CI/CD Automation, and Application Modernization</p>
                 <div class="hero-btns">
                     <a href="#contact" class="btn btn-primary">Get In Touch</a>
@@ -90,7 +90,7 @@
                     <div class="timeline-dot"></div>
                     <div class="timeline-date">Feb 2023 - Mar 2025</div>
                     <div class="timeline-content">
-                        <h3>Cloud Engineer</h3>
+                        <h3>Cloud DevOps Engineer</h3>
                         <h4>Digital KRANTI Pvt. Ltd., Noida</h4>
                         <ul>
                             <li>Designed and managed infrastructure for B2B e-commerce platform using Azure microservices.</li>
