--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>I'm a Cloud DevOps Engineer with 5 years of experience in architecting, deploying, and managing scalable cloud-native solutions across Azure and AWS. I'm skilled in modernizing monolithic applications to microservices using Docker and Kubernetes.</p>
+                    <p>I'm a Cloud DevOps Engineer with over 7 years of IT Experience including 5 years of experience in architecting, deploying, and managing scalable cloud-native solutions across Azure and AWS. I'm skilled in modernizing monolithic applications to microservices using Docker and Kubernetes.</p>
                     <p>My expertise includes Infrastructure-as-Code (Terraform, Ansible), CI/CD automation (Jenkins, GitLab), and cloud cost optimization strategies. I have a proven ability to deliver secure, compliant, and high-performance solutions for e-commerce platforms.</p>
                     <div class="personal-info">
                         <div class="info-item">
